[package]
name = "sealfs-rust"
version = "0.1.0"
edition = "2021"
authors = ["The Sealfs Developers"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
lazy_static = "1.4.0"
anyhow = "1.0.66"
thiserror = "1.0.37"
log = "0.4.17"
clap = { version = "4.0.18", features = ["derive"] }
env_logger = "0.9.1"
tonic = "0.8.2"
prost = "0.11.0"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.14"
tonic-health = "0.7.1"
dashmap = "5.4.0"

client = {path = "client"}
server = {path = "server"}
manager = {path = "manager"}
common = {path = "common"}

[build-dependencies]
tonic-build = "0.8"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "manager"
path = "src/bin/manager.rs"

[workspace]
members = [
    "server",
    "client",
    "common",
    "manager",
]
