[package]
name = "sealfs"
version = "0.1.0"
edition = "2021"
authors = ["The Sealfs Developers"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
lazy_static = "1.4.0"
anyhow = "1.0.66"
thiserror = "1.0.37"
log = "0.4.17"
clap = { version = "=4.0.18", features = ["derive"] }
env_logger = "0.9.1"
prost = "0.11.0"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.14"
# tonic-health = "0.7.1"
dashmap = "5.4.0"
async-trait = "0.1.59"
nix = "0.26.1"
rocksdb = "0.19.0"
bincode = "1.3.3"
fasthash = "0.4.0"
parking_lot = "0.12.1"
fuser = "0.11.1"
libc = "0.2"

[build-dependencies]
tonic-build = "0.8"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "manager"
path = "src/bin/manager.rs"

[workspace]
members = [
    "intercept",
]