[package]
name = "sealfs"
version = "0.1.0"
edition = "2021"
authors = ["The Sealfs Developers"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
lazy_static = "1.4.0"
anyhow = "1.0.66"
thiserror = "1.0.37"
log = "0.4.17"
clap = { version = "=4.0.18", features = ["derive"] }
env_logger = "0.9.1"
prost = "0.11.0"
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9.14"
# tonic-health = "0.7.1"
dashmap = "5.4.0"
async-trait = "0.1.73"
nix = "0.26.1"
rocksdb = "0.19.0"
bincode = "1.3.3"
ahash = "0.8.3"
parking_lot = "0.12.1"
fuser = "0.11.1"
libc = "0.2"
wyhash = "0.5.0"
kanal = "0.1.0-pre8"
rand = "0.8.5"
pegasusdb = { git = "https://github.com/uran0sH/pegasusdb.git" }
bytes = "1.4.0"
ibv = { git = "https://github.com/mond77/ibv.git" }
conhash = '0.5.0'
spin = "0.5"

[build-dependencies]
tonic-build = "0.8"

[dev-dependencies]
tonic = "0.8.2"
core_affinity = "0.8.0"
criterion = "0.4"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "manager"
path = "src/bin/manager.rs"

[workspace]
members = [
    "intercept",
]

[features]
disk-db = []
mem-db = []

[[bench]]
name = "rpc"
harness = false

[[bench]]
name = "grpc"
harness = false

[[bench]]
name = "local_storage"
harness = false
