[package]
name = "client"
version = "0.1.0"
edition = "2021"
authors = ["The Sealfs Developers"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
fuser = "0.11.1"
env_logger = "0.9"
log = "0.4.17"
clap = { version = "3.0", features = ["cargo"] }
lazy_static = "1.4.0"
dashmap = "5.4.0"
common = { path = "../common" }

[dev-dependencies]
env_logger = "0.9"
log = "0.4.17"
clap = { version = "3.0", features = ["cargo"] }
lazy_static = "1.4.0"
dashmap = "5.4.0"