[package]
name = "intercept"
version = "0.1.0"
edition = "2021"
authors = ["The Sealfs Developers"]
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2"
tokio = {version = "1.22.0", features = ["full"]}
dashmap = "5.4.0"
lazy_static = "1.4.0"
crossbeam-channel = "0.5"

[lib]
crate-type = ["cdylib"]