[package]
name = "server"
version = "0.1.0"
edition = "2021"
authors = ["The Sealfs Developers"]
license = "Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.21.2", features = ["full"] }
libc = "0.2"
anyhow = "1.0.66"
thiserror = "1.0.37"
log = "0.4.17"

common = { path = "../common" }